[TRL] uses Files.readString() instead of new String(Files.readAllBytes())